--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
 language: csharp
 solution: GetSitesForLastPass.sln
+dist: trusty
 mono:
   - latest
+addons:
+  sonarcloud:
+    organization: "shiveringsquirrel-github"
+    # token:
+    #  secure: "**************************" # encrypted value of your token
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - sonar-scanner
