--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ mono:
 addons:
   sonarcloud:
     organization: "shiveringsquirrel-github"
+    token: $SONAR_TOKEN
     # token:
     #  secure: "**************************" # encrypted value of your token
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  - sonar-scanner
+  - sonar-scanner -X
