Set analyzeGeneratedCode to true

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,5 @@ sonar.sources=./GetSitesForLastPass/
 sonar.language=cs
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.cs.analyzeGeneratedCode=true
